@@ -718,19 +718,15 @@ decl_stmt|;
 specifier|final
 name|int
 name|subIndex
-decl_stmt|;
-name|long
-name|word
-decl_stmt|;
-name|subIndex
-operator|=
+init|=
 name|index
 operator|&
 literal|0x3f
-expr_stmt|;
+decl_stmt|;
 comment|// index within the word
+name|long
 name|word
-operator|=
+init|=
 operator|(
 name|bits
 index|[
@@ -743,7 +739,7 @@ operator|-
 name|subIndex
 operator|)
 operator|)
-expr_stmt|;
+decl_stmt|;
 comment|// skip all the bits to the left of index
 if|if
 condition|(
@@ -827,6 +823,44 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|iter
+operator|instanceof
+name|OpenBitSetIterator
+operator|&&
+name|iter
+operator|.
+name|docID
+argument_list|()
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+specifier|final
+name|OpenBitSetIterator
+name|obs
+init|=
+operator|(
+name|OpenBitSetIterator
+operator|)
+name|iter
+decl_stmt|;
+name|or
+argument_list|(
+name|obs
+operator|.
+name|arr
+argument_list|,
+name|obs
+operator|.
+name|words
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|int
 name|doc
 decl_stmt|;
@@ -840,10 +874,8 @@ operator|.
 name|nextDoc
 argument_list|()
 operator|)
-operator|!=
-name|DocIdSetIterator
-operator|.
-name|NO_MORE_DOCS
+operator|<
+name|numBits
 condition|)
 block|{
 name|set
@@ -853,6 +885,8 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+comment|/** this = this OR other */
 DECL|method|or
 specifier|public
 name|void
@@ -862,19 +896,41 @@ name|FixedBitSet
 name|other
 parameter_list|)
 block|{
+name|or
+argument_list|(
+name|other
+operator|.
+name|bits
+argument_list|,
+name|other
+operator|.
+name|bits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|or
+specifier|private
+name|void
+name|or
+parameter_list|(
+specifier|final
+name|long
+index|[]
+name|otherArr
+parameter_list|,
+specifier|final
+name|int
+name|otherLen
+parameter_list|)
+block|{
+specifier|final
 name|long
 index|[]
 name|thisArr
 init|=
 name|this
-operator|.
-name|bits
-decl_stmt|;
-name|long
-index|[]
-name|otherArr
-init|=
-name|other
 operator|.
 name|bits
 decl_stmt|;
@@ -889,9 +945,7 @@ name|thisArr
 operator|.
 name|length
 argument_list|,
-name|otherArr
-operator|.
-name|length
+name|otherLen
 argument_list|)
 decl_stmt|;
 while|while
@@ -907,6 +961,404 @@ index|[
 name|pos
 index|]
 operator||=
+name|otherArr
+index|[
+name|pos
+index|]
+expr_stmt|;
+block|}
+block|}
+comment|/** Does in-place AND of the bits provided by the    *  iterator. */
+DECL|method|and
+specifier|public
+name|void
+name|and
+parameter_list|(
+name|DocIdSetIterator
+name|iter
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|iter
+operator|instanceof
+name|OpenBitSetIterator
+operator|&&
+name|iter
+operator|.
+name|docID
+argument_list|()
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+specifier|final
+name|OpenBitSetIterator
+name|obs
+init|=
+operator|(
+name|OpenBitSetIterator
+operator|)
+name|iter
+decl_stmt|;
+name|and
+argument_list|(
+name|obs
+operator|.
+name|arr
+argument_list|,
+name|obs
+operator|.
+name|words
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+if|if
+condition|(
+name|numBits
+operator|==
+literal|0
+condition|)
+return|return;
+name|int
+name|disiDoc
+decl_stmt|,
+name|bitSetDoc
+init|=
+name|nextSetBit
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+while|while
+condition|(
+name|bitSetDoc
+operator|!=
+operator|-
+literal|1
+operator|&&
+operator|(
+name|disiDoc
+operator|=
+name|iter
+operator|.
+name|advance
+argument_list|(
+name|bitSetDoc
+argument_list|)
+operator|)
+operator|<
+name|numBits
+condition|)
+block|{
+name|clear
+argument_list|(
+name|bitSetDoc
+argument_list|,
+name|disiDoc
+argument_list|)
+expr_stmt|;
+name|disiDoc
+operator|++
+expr_stmt|;
+name|bitSetDoc
+operator|=
+operator|(
+name|disiDoc
+operator|<
+name|numBits
+operator|)
+condition|?
+name|nextSetBit
+argument_list|(
+name|disiDoc
+argument_list|)
+else|:
+operator|-
+literal|1
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|bitSetDoc
+operator|!=
+operator|-
+literal|1
+condition|)
+block|{
+name|clear
+argument_list|(
+name|bitSetDoc
+argument_list|,
+name|numBits
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+comment|/** this = this AND other */
+DECL|method|and
+specifier|public
+name|void
+name|and
+parameter_list|(
+name|FixedBitSet
+name|other
+parameter_list|)
+block|{
+name|and
+argument_list|(
+name|other
+operator|.
+name|bits
+argument_list|,
+name|other
+operator|.
+name|bits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|and
+specifier|private
+name|void
+name|and
+parameter_list|(
+specifier|final
+name|long
+index|[]
+name|otherArr
+parameter_list|,
+specifier|final
+name|int
+name|otherLen
+parameter_list|)
+block|{
+specifier|final
+name|long
+index|[]
+name|thisArr
+init|=
+name|this
+operator|.
+name|bits
+decl_stmt|;
+name|int
+name|pos
+init|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|thisArr
+operator|.
+name|length
+argument_list|,
+name|otherLen
+argument_list|)
+decl_stmt|;
+while|while
+condition|(
+operator|--
+name|pos
+operator|>=
+literal|0
+condition|)
+block|{
+name|thisArr
+index|[
+name|pos
+index|]
+operator|&=
+name|otherArr
+index|[
+name|pos
+index|]
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|thisArr
+operator|.
+name|length
+operator|>
+name|otherLen
+condition|)
+block|{
+name|Arrays
+operator|.
+name|fill
+argument_list|(
+name|thisArr
+argument_list|,
+name|otherLen
+argument_list|,
+name|thisArr
+operator|.
+name|length
+argument_list|,
+literal|0L
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|/** Does in-place AND NOT of the bits provided by the    *  iterator. */
+DECL|method|andNot
+specifier|public
+name|void
+name|andNot
+parameter_list|(
+name|DocIdSetIterator
+name|iter
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|iter
+operator|instanceof
+name|OpenBitSetIterator
+operator|&&
+name|iter
+operator|.
+name|docID
+argument_list|()
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+specifier|final
+name|OpenBitSetIterator
+name|obs
+init|=
+operator|(
+name|OpenBitSetIterator
+operator|)
+name|iter
+decl_stmt|;
+name|andNot
+argument_list|(
+name|obs
+operator|.
+name|arr
+argument_list|,
+name|obs
+operator|.
+name|words
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|int
+name|doc
+decl_stmt|;
+while|while
+condition|(
+operator|(
+name|doc
+operator|=
+name|iter
+operator|.
+name|nextDoc
+argument_list|()
+operator|)
+operator|<
+name|numBits
+condition|)
+block|{
+name|clear
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+comment|/** this = this AND NOT other */
+DECL|method|andNot
+specifier|public
+name|void
+name|andNot
+parameter_list|(
+name|FixedBitSet
+name|other
+parameter_list|)
+block|{
+name|andNot
+argument_list|(
+name|other
+operator|.
+name|bits
+argument_list|,
+name|other
+operator|.
+name|bits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|andNot
+specifier|private
+name|void
+name|andNot
+parameter_list|(
+specifier|final
+name|long
+index|[]
+name|otherArr
+parameter_list|,
+specifier|final
+name|int
+name|otherLen
+parameter_list|)
+block|{
+specifier|final
+name|long
+index|[]
+name|thisArr
+init|=
+name|this
+operator|.
+name|bits
+decl_stmt|;
+name|int
+name|pos
+init|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|thisArr
+operator|.
+name|length
+argument_list|,
+name|otherLen
+argument_list|)
+decl_stmt|;
+while|while
+condition|(
+operator|--
+name|pos
+operator|>=
+literal|0
+condition|)
+block|{
+name|thisArr
+index|[
+name|pos
+index|]
+operator|&=
+operator|~
 name|otherArr
 index|[
 name|pos
